--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 language: julia
+
 os:
   - linux
-  - osx
+
 notifications:
   email: false
+
 julia:
   - 0.6
   - nightly
-before_install:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+
+matrix:
+  allow_failures:
+  - julia: nightly
+
 script:
   - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.test("LogParser")'
