--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,39 @@
+## Documentation: http://docs.travis-ci.com/user/languages/julia/
+sudo: required
+services:
+  - docker
 language: julia
-
 os:
   - linux
-
-notifications:
-  email: false
-
 julia:
-  #- 0.6
   - 1.0
   - nightly
+notifications:
+  email: false
+git:
+  depth: 99999999
 
+## uncomment the following lines to allow failures on nightly julia
+## (tests will run but not make your overall status red)
 matrix:
-  allow_failures:
-  - julia: nightly
+ allow_failures:
+ - julia: nightly
 
-script:
-  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.test("LogParser")'
+## uncomment and modify the following lines to manually install system packages
+#addons:
+#  apt: # apt-get for linux
+#    packages:
+#    - gfortran
+#before_script: # homebrew for mac
+#  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
+
+## uncomment the following lines to override the default test script
+#script:
+#  - julia -e 'Pkg.clone(pwd()); Pkg.build("OmniSci"); Pkg.test("OmniSci"; coverage=true)'
+after_success:
+  # push coverage results to Coveralls
+  #- julia -e 'using Pkg; cd(Pkg.dir("OmniSci")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  # push coverage results to Codecov
+  #- julia -e 'using Pkg; cd(Pkg.dir("OmniSci")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  #- julia -e 'using Pkg; Pkg.add("Documenter")'
+  #- julia -e 'using Pkg; cd(Pkg.dir("OmniSci")); include(joinpath("docs", "make.jl"))'
